--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "8.5.0"
   },
   "dependencies": {
+    "html-to-json": "^0.6.0",
     "jquery": "^3.2.1",
     "puppeteer": "^0.11.0",
     "socket.io": "^2.0.3",
